[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://sprite/heart.png" type="Texture" id=2]
[ext_resource path="res://font/Comic Sans MS 400.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://PauseMenu.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://font/Comic Sans MS 400.ttf"

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MessageLabel" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -45.0
margin_bottom = 45.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.866667, 0.203922, 0.203922, 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -291.0
margin_top = -90.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Coverage: 0%"
align = 2
valign = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -145.5
margin_top = -90.0
margin_right = 145.5
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Time: 0"
align = 2
valign = 2
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -48.0
margin_right = 342.0
rect_min_size = Vector2( 342, 48 )
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart1" type="TextureRect" parent="HBoxContainer"]
margin_right = 48.0
margin_bottom = 48.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 48, 48 )
size_flags_stretch_ratio = 0.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart2" type="TextureRect" parent="HBoxContainer"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 48.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart3" type="TextureRect" parent="HBoxContainer"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 48.0
grow_horizontal = 0
grow_vertical = 0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="pause" from="Pause" to="." method="resume"]
